--- a/.github/workflows/cidr_convert.yml
+++ b/.github/workflows/cidr_convert.yml
@@ -30,4 +30,7 @@ jobs:
           git config --global user.email "github-actions@github.com"
           git add wildcard_output.txt
           git diff --cached --quiet || git commit -m "🔄 自动更新 CIDR 转换结果"
-          git push
+          git push origin HEAD:main
+        env: |
+		  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
