--- a/.github/workflows/cidr_convert.yml
+++ b/.github/workflows/cidr_convert.yml
@@ -1,38 +1,38 @@
-name: Update CIDR to Wildcard
+name: CIDR to Wildcard Conversion
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天 00:00 运行
-  workflow_dispatch:  # 允许手动运行
-
-permissions:
-  contents: write  # 允许 GitHub Actions 推送代码
+    - cron: '0 1 * * *'   # 每天凌晨1点 UTC 运行，可根据需要调整
+  workflow_dispatch:      # 支持手动触发
 
 jobs:
   convert_and_push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 🚀 检出代码
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: 🐍 设置 Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.9'
 
-      - name: 📦 安装依赖
-        run: pip install requests netaddr
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install netaddr requests
 
-      - name: 🔄 下载并转换 CIDR
-        run: python convert_cidr.py
+      - name: Run CIDR Conversion Script
+        run: python cidr_to_wildcard.py
 
-      - name: 🚀 提交更改并推送
+      - name: Commit and push changes
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions@github.com"
           git add wildcard_output.txt
           git diff --cached --quiet || git commit -m "🔄 自动更新 CIDR 转换结果"
-          git push origin HEAD:main
+          git push
         env:
+          # 使用内置的 GITHUB_TOKEN，无需额外配置
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
