--- a/.github/workflows/cidr_convert.yml
+++ b/.github/workflows/cidr_convert.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          # 保持凭据，以便后续推送使用 GITHUB_TOKEN
+          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -26,12 +29,10 @@ jobs:
       - name: Run CIDR Conversion Script
         run: python cidr_to_wildcard.py
 
-      - name: 🚀 提交更改并推送
+      - name: Commit and push changes
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions@github.com"
           git add wildcard_output.txt
           git diff --cached --quiet || git commit -m "🔄 自动更新 CIDR 转换结果"
-          git push origin HEAD:main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/skyairun/geoip.git HEAD:main
