--- a/.github/workflows/cidr_convert.yml
+++ b/.github/workflows/cidr_convert.yml
@@ -2,7 +2,7 @@ name: CIDR to Wildcard Conversion
 
 on:
   schedule:
-    - cron: '0 1 * * *'   # 每天凌晨1点 UTC 运行，可根据需要调整
+  ;  - cron: '0 1 * * *'   # 每天凌晨1点 UTC 运行，可根据需要调整
   workflow_dispatch:      # 支持手动触发
 
 jobs:
